--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,13 @@ spring.security.user.name=admin
 spring.security.user.password=admin
 spring.security.user.roles=ADMIN
 logging.level.org.springframework.security=DEBUG
+
+# Web properties
+spring.servlet.multipart.max-file-size=1024MB
+spring.servlet.multipart.max-request-size=1024MB
+
+# Server properties
+server.tomcat.max-http-post-size=1000000000000
+server.tomcat.max-swallow-size=1000000000000
+
+spring.resources.static-locations=file:///E:/IT/Angle/BACKEND/Angle/src/main/resources/
