--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,18 @@ server.port=7700
 # Konfiguracja bazy danych
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/angleDB
-spring.datasource.username=root
-spring.datasource.password=root
+SPRING.DATASOURCE.USERNAME=${ANGLE_DB_USER}
+SPRING.DATASOURCE.PASSWORD=${ANGLE_DB_PASSWORD}
+
+
+# Konfiguracja e-mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${ANGLE_EMAIL_ADDRESS}
+spring.mail.password=${ANGLE_EMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 
 # Konfiguracja JPA
