Moved paths to system variables

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=7700
 
 # Konfiguracja bazy danych
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/angleDB
+spring.datasource.url=${ANGLE_DB_URL}
 SPRING.DATASOURCE.USERNAME=${ANGLE_DB_USER}
 SPRING.DATASOURCE.PASSWORD=${ANGLE_DB_PASSWORD}
 
@@ -27,17 +27,17 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 
-spring.security.user.name=admin
-spring.security.user.password=admin
 spring.security.user.roles=ADMIN
 logging.level.org.springframework.security=DEBUG
 
 # Web properties
-spring.servlet.multipart.max-file-size=1024MB
-spring.servlet.multipart.max-request-size=1024MB
+spring.servlet.multipart.max-file-size=8096MB
+spring.servlet.multipart.max-request-size=8096MB
 
 # Server properties
-server.tomcat.max-http-post-size=1000000000000
-server.tomcat.max-swallow-size=1000000000000
+server.tomcat.max-http-post-size=8589934592
+server.tomcat.max-swallow-size=8589934592
+
+
 
 spring.resources.static-locations=file:///E:/IT/Angle/BACKEND/Angle/src/main/resources/
