Linux adapted + readme updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=${ANGLE_DB_URL}
 SPRING.DATASOURCE.USERNAME=${ANGLE_DB_USER}
 SPRING.DATASOURCE.PASSWORD=${ANGLE_DB_PASSWORD}
+spring.datasource.hikari.initializationFailTimeout=30000
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.validationTimeout=10000
+spring.datasource.hikari.maxLifetime=1800000
+spring.datasource.hikari.idleTimeout=600000
+spring.datasource.hikari.maximumPoolSize=10
+
 
 
 # Konfiguracja e-mail
@@ -18,6 +25,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 
+
 # Konfiguracja JPA
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
@@ -25,6 +33,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
 
 
 spring.security.user.roles=ADMIN
@@ -40,4 +49,5 @@ server.tomcat.max-swallow-size=8589934592
 
 
 
-spring.resources.static-locations=file:///E:/IT/Angle/BACKEND/Angle/src/main/resources/
+
+spring.resources.static-locations=classpath:/static/,file:/app/resources/
