--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,6 +48,5 @@ server.tomcat.max-http-post-size=8589934592
 server.tomcat.max-swallow-size=8589934592
 
 
-
-
+#spring.resources.static-locations=classpath:/static/, file:src/main/resources/media/
 spring.resources.static-locations=classpath:/static/,file:/app/resources/
